refatorando o sistema